# serde-convert

./: .rustfmt.toml  .taplo.toml  Cargo.toml  README.md  deny.toml
src/: formats.rs  main.rs
src/formats/: json.rs  toml.rs  xml.rs  yaml.rs
