[package]
name = "serde-convert"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
serde-transcode = "1.1.1"
serde_json = "1.0.112"
serde_yaml = "0.9.30"
toml = "0.8.8"
clap = { version = "4.4.18", features = ["derive"] }
erased-serde = "0.4.2"
serde = "1.0.196"
serde-xml-rs = "0.6.0"
